--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -9,13 +9,25 @@
 </head>
 
 <body>
-    <nav th:fragment="navbar" class="navbar navbar-dark bg-dark" data-bs-theme="dark">
-        <div class="container container-fluid">
-            <a class="navbar-brand" th:href="@{/}">
-                <img th:src="@{/img/pizza.png}" alt="Pizza" width="40" height="40"
-                    class="d-inline-block align-center me-2">
-                Pizzeria CRUD
+    <nav th:fragment="navbar(current)" class="navbar navbar-expand-lg bg-dark border-bottom border-body mb-5"
+        data-bs-theme="dark">
+        <div class="container-fluid mx-5">
+            <a class="navbar-brand" th:href="@{/pizzas}">
+                <img th:src="@{/img/pizza.png}" alt="pizza" width="40" height="40" class="me-2 allign-middle"><span
+                    class="allign-middle">Pizzeria Crud</span>
             </a>
+            <button class=" navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" th:href="@{/pizzas}"
+                            th:classAppend="@{current = 'Pizzas'} ? active : not active">All Pizzas</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 </body>
