--- a/src/main/resources/templates/pizzas/index.html
+++ b/src/main/resources/templates/pizzas/index.html
@@ -8,10 +8,10 @@
 
 <body>
     <header>
-        <nav th:replace="~{fragments/navbar :: navbar}"></nav>
+        <nav th:replace="~{fragments/navbar :: navbar('Pizzas')}"></nav>
     </header>
 
-    <main class="container">
+    <main class="m-5">
         <section class="row">
             <div class="col-12">
                 <h1 class="mt-4">
@@ -26,16 +26,28 @@
                             <th>Description</th>
                             <th>Allergens</th>
                             <th>Number of Orders</th>
+                            <th></th>
+                            <th></th>
                         </tr>
                     </thead>
 
                     <tbody>
                         <tr th:each="pizza : ${pizzas}" th:object="${pizza}">
-                            <td th:text="*{id}"></td>
-                            <td th:text="*{name}"></td>
-                            <td th:text="*{description}"></td>
-                            <td th:text="*{allergens}"></td>
-                            <td th:text="*{numberOfOrders}"></td>
+                            <td th:text="*{id}" class="align-middle"></td>
+                            <td th:text="*{name}" class="align-middle"></td>
+                            <td th:text="*{description}" class="align-middle"></td>
+                            <td th:text="*{allergens}" class="align-middle"></td>
+                            <td th:text="*{numberOfOrders}" class="align-middle"></td>
+                            <td class="align-middle">
+                                <a th:href="@{/pizzas/{id}(id=*{id})}" class="btn btn-dark">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-eye-fill" viewBox="0 0 16 16">
+                                        <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0" />
+                                        <path
+                                            d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8m8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7" />
+                                    </svg>
+                                </a>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
