feat: added create-or-edit

--- a/src/main/resources/templates/pizzas/show.html
+++ b/src/main/resources/templates/pizzas/show.html
@@ -21,9 +21,9 @@
                         <p class="card-text">[[*{description}]]</p>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item ps-0"> Allergens: [[*{allergens}]] </li>
-                            <li class="list-group-item ps-0">Order's number: [[*{numberOfOrders}]] </li>
+                            <li class="list-group-item ps-0">Order's number: [[*{orders}]] </li>
                         </ul>
-                        <a th:href="@{/pizzas}" class="btn btn-dark">Go back to Pizzas</a>
+                        <a th:href="@{/pizzas}" class="btn btn-dark mt-4">Go back to Pizzas</a>
                     </div>
                 </div>
             </div>
