--- a/src/main/resources/templates/pizzas/index.html
+++ b/src/main/resources/templates/pizzas/index.html
@@ -14,18 +14,32 @@
     <main class="m-5">
         <section class="row">
             <div class="col-12">
-                <h1 class="mt-4">
+                <h1 class="mb-5">
                     Pizzas in our menu
                 </h1>
 
-                <table class="table mt-4" th:if="${pizzas.size()>0}">
+                <div class="d-flex">
+                    <a th:href="@{/pizzas/create}" class="btn btn-dark mb-3 ms-auto ">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white"
+                            class="bi bi-plus-circle" viewBox="0 0 16 16">
+                            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
+                            <path
+                                d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4" />
+                        </svg><span class="ms-2">Pizza</span>
+                    </a>
+                </div>
+
+                <th:block th:replace="~{fragments/messages :: redirectMessage(${message}, ${messageClass})}"></th:block>
+
+                <table class="table" th:if="${pizzas.size()>0}">
                     <thead>
                         <tr>
                             <th>Id</th>
                             <th>Name</th>
                             <th>Description</th>
                             <th>Allergens</th>
-                            <th>Number of Orders</th>
+                            <th>Orders</th>
+                            <th></th>
                             <th></th>
                             <th></th>
                         </tr>
@@ -37,14 +51,32 @@
                             <td th:text="*{name}" class="align-middle"></td>
                             <td th:text="*{description}" class="align-middle"></td>
                             <td th:text="*{allergens}" class="align-middle"></td>
-                            <td th:text="*{numberOfOrders}" class="align-middle"></td>
+                            <td th:text="*{orders}" class="align-middle"></td>
                             <td class="align-middle">
-                                <a th:href="@{/pizzas/{id}(id=*{id})}" class="btn btn-dark">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                <a th:href="@{/pizzas/{id}(id=*{id})}">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black"
                                         class="bi bi-eye-fill" viewBox="0 0 16 16">
                                         <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0" />
                                         <path
                                             d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8m8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7" />
+                                    </svg>
+                                </a>
+                            </td>
+                            <td class="align-middle">
+                                <a th:href="@{/pizzas/edit/{id}(id=*{id})}">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black"
+                                        class="bi bi-pencil-fill" viewBox="0 0 16 16">
+                                        <path
+                                            d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z" />
+                                    </svg>
+                                </a>
+                            </td>
+                            <td class="align-middle">
+                                <a th:href="@{/}">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black"
+                                        class="bi bi-trash3-fill" viewBox="0 0 16 16">
+                                        <path
+                                            d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5" />
                                     </svg>
                                 </a>
                             </td>
