--- a/src/main/resources/templates/pizzas/show.html
+++ b/src/main/resources/templates/pizzas/show.html
@@ -21,9 +21,18 @@
                         <p class="card-text">[[*{description}]]</p>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item ps-0"> Allergens: [[*{allergens}]] </li>
-                            <li class="list-group-item ps-0">Order's number: [[*{orders}]] </li>
+                            <li class="list-group-item ps-0">Price: € [[*{price}]] </li>
                         </ul>
-                        <a th:href="@{/pizzas}" class="btn btn-dark mt-4">Go back to Pizzas</a>
+                        <div>
+                            <a th:href="@{/pizzas}" class="btn btn-dark mt-4">Go back to Pizzas</a>
+                            <a th:href="@{/pizzas/edit/{id}(id=*{id})}" class="btn btn-secondary mt-4">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white"
+                                    class="bi bi-pencil-fill me-2" viewBox="0 0 16 16">
+                                    <path
+                                        d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z" />
+                                </svg> Edit
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
